--- a/index.html
+++ b/index.html
@@ -1,3 +1,76 @@
+
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+    <script src="/script.js" defer></script>
+  </head>
+  <body>
+    <div id="loading">
+      <div class="loading-text" id="name-loader">
+        <span data-text="A">V</span>
+        <span data-text="B">I</span>
+        <span data-text="H">N</span>
+        <span data-text="I">A</span>
+        <span data-text="J">Y</span>
+        <span data-text="J">&nbsp; </span>
+        <span data-text="J">B</span>
+        <span data-text="J">E</span>
+        <span data-text="J">G</span>
+        <span data-text="J">A</span>
+        <span data-text="J">R</span>
+      </div>
+    </div>
+    <!-- Navbar  -->
+    <header class="navbar">
+      <div class="logo"><a href="/menus/contact.html" class="btn small">Vinay B.</a></div>
+      <div class="menu">
+        <ul class="menu-head">
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="./menus/about.html">About</a></li>
+          <li><a href="./menus/work.html">Work</a></li>
+          <!-- <li><a href="./menus/contact.html">Contact</a></li> -->
+
+        </ul>
+      </div>
+      <div class="nav-right">
+        <!-- <span class="available">● available for work</span> -->
+        <a href="/menus/contact.html" class="btn small">Reach out →</a>
+      </div>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero">
+      <h1>
+        Frontend Developer<br />
+        & <span class="italic">Creative</span> Coder
+      </h1>
+      <p>
+        I Craft beautiful,interactive web experiences with modern technologies 
+      <br>Passionate about clean code stunning desgins,seamless user experiences</p>
+      <div class="buttons">
+        <a href="/menus/work.html" class="btn light">View projects</a>
+        <a href="#" class="btn dark">Download my resume ⬇</a>
+      </div>
+    </section>
+
+    <div class="mouse-magnet"></div>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"
+            integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/ScrollTrigger.min.js"
+            integrity="sha512-P2IDYZfqSwjcSjX0BKeNhwRUH8zRPGlgcWl5n6gBLzdi4Y5/0O4zaXrtO4K9TZK6Hn1BenYpKowuCavNandERg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
+  </body>
+</html>
+
 <!-- <!DOCTYPE html>
 <html lang="en">
 
@@ -52,58 +125,3 @@
 </body>
 
 </html> -->
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="/script.js" defer></script>
-  </head>
-  <body>
-    <!-- Navbar  -->
-    <header class="navbar">
-      <div class="logo">VB</div>
-      <div class="menu">
-        <ul class="menu-head">
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="./menus/about.html">About</a></li>
-          <li><a href="./menus/work.html">Work</a></li>
-          <!-- <li><a href="./menus/contact.html">Contact</a></li> -->
-
-        </ul>
-      </div>
-      <div class="nav-right">
-        <!-- <span class="available">● available for work</span> -->
-        <a href="/menus/contact.html" class="btn small">Reach out →</a>
-      </div>
-    </header>
-
-    <!-- Hero Section -->
-    <section class="hero">
-      <h1>
-        Frontend <span class="italic">Developer</span><br />
-        & <span class="italic">Creative</span> Coder
-      </h1>
-      <p>
-        I Craft beautiful,interactive web experiences with modern <br>technologies 
-      </p>
-      <p>Passionate about clean code stunning desgins,seamless user <br>experiences</p>
-      <div class="buttons">
-        <a href="/menus/work.html" class="btn light">View projects</a>
-        <a href="#" class="btn dark">Download my resume ⬇</a>
-      </div>
-    </section>
-    
-    <hr class="hr">
-    <div class="learned">
-     <div class="skills">
-      <img src="/images/-html-3d-icon-png.webp" alt="" srcset="">
-     </div>
-     
-    </div>
-
-  </body>
-</html>
