--- a/menus/about.html
+++ b/menus/about.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
     <link rel="stylesheet" href="/css/about.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-    <script src="/js/about.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    
+    <script src="/js/about.js" defer></script>
   </head>
   <body>
     <div class="main">
@@ -15,9 +15,9 @@
         <div class="logo"><a href="/index.html">VB</a></div>
         <div class="menu">
           <ul class="menu-head">
-            <li><a href="/index.html">home</a></li>
-            <li><a href="./menus/about.html">about</a></li>
-            <li><a href="./menus/work.html">work</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="./menus/about.html">About</a></li>
+            <li><a href="/menus/work.html">Work</a></li>
           </ul> 
         </div>
         <div class="nav-right">
@@ -34,7 +34,7 @@
   <section id="about">
   <div class="about-container">
     <div class="about-img">
-      <img src="your-photo.jpg" alt="Vinay Begar">
+      <img src="/images/img-about-removebg-preview.png" alt="Vinay Begar">
     </div>
     <div class="about-text">
       <h2>About Me</h2>
@@ -78,6 +78,18 @@
     </div>
   </div>
 </section>
+  <!-- <div class="skills">
+        <span>SKILLS</span>
+        <marquee behavior="scroll" direction="left">
+          <div class="logos">
+            <img src="/images/HTML.png" alt="HTML" class="html" />
+            <img src="/images/CSS.png" alt="CSS" class="css" />
+            <img src="/images/JS.png" alt="JavaScript" class="javascript" />
+            <img src="/images/react.png" alt="React" class="react" />
+            <img src="/images/tailwind.png" alt="tailwind" class="tailwind" />
+            <img src="/images/gsap.jpeg" alt="gsap" class="gsap" />
+          </div>
+        </marquee> -->
 
 <!-- Footer -->
 <footer class="site-footer">
@@ -98,6 +110,12 @@
     <p>© 2025 Vinay Begar</p>
   </div>
 </footer>
-
+ <div class="mouse-magnet"></div>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"
+            integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/ScrollTrigger.min.js"
+            integrity="sha512-P2IDYZfqSwjcSjX0BKeNhwRUH8zRPGlgcWl5n6gBLzdi4Y5/0O4zaXrtO4K9TZK6Hn1BenYpKowuCavNandERg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
   </body>
 </html>
