--- a/menus/about.html
+++ b/menus/about.html
@@ -1,121 +1,37 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
+    <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/about.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    
     <script src="/js/about.js" defer></script>
   </head>
   <body>
-    <div class="main">
-      <nav class="navbar">
-        <div class="logo"><a href="/index.html">VB</a></div>
-        <div class="menu">
-          <ul class="menu-head">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="./menus/about.html">About</a></li>
-            <li><a href="/menus/work.html">Work</a></li>
-          </ul> 
+    <!-- Navbar  -->
+    <header class="navbar">
+      <div class="logo"><a href="/menus/contact.html" class="btn small">Vinay B.</a></div>
+      <div class="menu">
+        <ul class="menu-head">
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="./menus/about.html">About</a></li>
+          <li><a href="./menus/work.html">Work</a></li>
+          <!-- <li><a href="./menus/contact.html">Contact</a></li> -->
+
+        </ul>
+      </div>
+      <div class="nav-right">
+        <!-- <span class="available">● available for work</span> -->
+        <a href="/menus/contact.html" class="btn small">Reach out →</a>
+      </div>
+    </header>
+    <!-- hero Section -->
+
+    <section class="hero section">
+        <div class="hero">
+            <img src="/images/vinay-bg2.jpeg" alt="" srcset="">
         </div>
-        <div class="nav-right">
-          <!-- <span class="available">● available for work</span> -->
-          <a href="/menus/contact.html" class="btn small">Reach out →</a>
-        </div>
-      </nav>
-     <section class="about-header dotted-bg">
-  <img src="/images/vinay-bg2.jpeg" alt="Profile Photo" class="profile-img">
-  <h1><span>Vinay</span>  Begar</h1>
-  <p class="role">Frontend Developer </p>
-    </div>
-  </section>
-  <section id="about">
-  <div class="about-container">
-    <div class="about-img">
-      <img src="/images/img-about-removebg-preview.png" alt="Vinay Begar">
-    </div>
-    <div class="about-text">
-      <h2>About Me</h2>
-      <h3>Crafting seamless web experiences with code, design, and a bit of curiosity.</h3>
-      <p>
-        Hi, I’m Vinay — a frontend developer who loves turning ideas into interactive,
-        accessible, and beautiful digital experiences. My toolkit includes HTML, CSS, 
-        JavaScript, and React, along with a growing stack of modern frontend tools that 
-        help me bring projects to life efficiently and with flair.
-      </p>
-      <p>
-        What excites me most about frontend development is the balance between logic 
-        and creativity. I enjoy solving complex problems through clean, maintainable 
-        code while also paying attention to the small details that make an interface 
-        feel effortless to use.
-      </p>
-      <p>
-        I’m passionate about building for the web in a way that’s inclusive and 
-        future-focused. Whether it’s performance, accessibility, or staying aligned 
-        with design trends, I care about making sites that don’t just look good, but 
-        feel right to every user.
-      </p>
-      <p>
-        When I’m not coding, you’ll probably find me exploring new design concepts, 
-        testing out emerging frontend practices, or experimenting with ways to make 
-        the web a little faster, smarter, and more enjoyable.
-      </p>
-    </div>
-  </div>
-</section>
-
-
-  <!-- Call to Action Section -->
-<section class="cta-section">
-  <div class="dots"></div>
-  <div class="cta-content">
-    <h2><em>Interested</em> in <br>working together?</h2>
-    <div class="cta-buttons">
-      <a href="/menus/contact.html" class="btn">Reach me out →</a>
-      <a href="/resume.pdf" class="btn outline">Download my resume ⬇</a>
-    </div>
-  </div>
-</section>
-  <!-- <div class="skills">
-        <span>SKILLS</span>
-        <marquee behavior="scroll" direction="left">
-          <div class="logos">
-            <img src="/images/HTML.png" alt="HTML" class="html" />
-            <img src="/images/CSS.png" alt="CSS" class="css" />
-            <img src="/images/JS.png" alt="JavaScript" class="javascript" />
-            <img src="/images/react.png" alt="React" class="react" />
-            <img src="/images/tailwind.png" alt="tailwind" class="tailwind" />
-            <img src="/images/gsap.jpeg" alt="gsap" class="gsap" />
-          </div>
-        </marquee> -->
-
-<!-- Footer -->
-<footer class="site-footer">
-  <div class="footer-left">
-    <a href="/menus/work.html">work</a>
-    <a href="/menus/about.html">about</a>
-    <a href="/menus/contact.html">contact</a>
-  </div>
-
-  <div class="footer-center">
-    <a href="https://facebook.com" target="_blank">🌐</a>
-    <a href="https://instagram.com" target="_blank">📷</a>
-    <a href="https://github.com" target="_blank">💻</a>
-    <a href="https://linkedin.com" target="_blank">🔗</a>
-  </div>
-
-  <div class="footer-right">
-    <p>© 2025 Vinay Begar</p>
-  </div>
-</footer>
- <div class="mouse-magnet"></div>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"
-            integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/ScrollTrigger.min.js"
-            integrity="sha512-P2IDYZfqSwjcSjX0BKeNhwRUH8zRPGlgcWl5n6gBLzdi4Y5/0O4zaXrtO4K9TZK6Hn1BenYpKowuCavNandERg=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
-  </body>
-</html>
+    </section>
