--- a/menus/about.html
+++ b/menus/about.html
@@ -1,26 +1,30 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/css/about.css" />
     <script src="/js/about.js" defer></script>
   </head>
   <body>
     <!-- Navbar  -->
     <header class="navbar">
-      <div class="logo"><a href="/menus/contact.html" class="btn small">Vinay B.</a></div>
+      <div class="logo">
+        <a href="/menus/contact.html" class="btn small">Vinay B.</a>
+      </div>
       <div class="menu">
         <ul class="menu-head">
           <li><a href="/index.html">Home</a></li>
           <li><a href="./menus/about.html">About</a></li>
           <li><a href="./menus/work.html">Work</a></li>
           <!-- <li><a href="./menus/contact.html">Contact</a></li> -->
-
         </ul>
       </div>
       <div class="nav-right">
@@ -30,8 +34,18 @@
     </header>
     <!-- hero Section -->
 
-    <section class="hero section">
-        <div class="hero">
-            <img src="/images/vinay-bg2.jpeg" alt="" srcset="">
-        </div>
-    </section>
+    <div class="about-container">
+      <img
+        src="/images/vinay-bg2.jpeg"
+        alt="Profile Photo"
+        class="profile-img"
+      />
+      <h1><span>Vinay</span> Begar</h1>
+      <p class="role">Front Web Developer</p>
+    </div>
+    <!-- <hr class="hr"> -->
+     <div class="line"></div>
+     
+     <!--  -->
+  </body>
+</html>
