--- a/menus/about.html
+++ b/menus/about.html
@@ -40,13 +40,13 @@
     <h1><span>Vinay</span> Begar</h1>
     <p class="role">Frontend Web Developer</p>
   </div>
-  <!-- <hr class="hr"> -->
+
   <div class="line"></div>
 
   <!--  -->
   <!-- About information -->
   <section class="self-information">
-    <div class="about-info">
+   
 
   </section>
   <div class="last-line"></div>
@@ -72,8 +72,13 @@
       </div>
       </div>
   </section>
+  
+  <div class="before-pattern">
+    <div class="heading"> <h1>These isn't <BR> Everything yet</h1>
+     <a href="/menus/work.html"><button class="after-button"><h2>More about me </h2></button></a>
 
-
+    </div>
+    <!-- <h1>these isn't  everything yet</h1> -->
+  </div>
 </body>
-
 </html>
