stack images added

--- a/menus/about.html
+++ b/menus/about.html
@@ -40,15 +40,40 @@
     <h1><span>Vinay</span> Begar</h1>
     <p class="role">Frontend Web Developer</p>
   </div>
-
+  
   <div class="line"></div>
-
-  <!--  -->
   <!-- About information -->
-  <section class="self-information">
-   
+  <!-- <section class="self-information"> -->
+    <div class="stack">
+                <!-- <h3>My Stack</h3> -->
+                  <div class="marquee">
+                    <div class="svg-icons">
+                      <!-- These icons will scroll -->
+                      <img src="/stack/html-1.svg" alt="HTML" height="70px" />
+                      <img src="/stack/css-3.svg" alt="CSS" height="70px" />
+                      <img src="/stack/imgi_12_nodejs.svg" alt="Node.js" height="70px" />
+                      <img src="/stack/imgi_14_tailwind.svg" alt="Tailwind" height="70px" />
+                      <img src="/stack/imgi_15_mongodb.svg" alt="Mongodb" height="70px" />
+                      <img src="/stack/imgi_18_Git.svg" alt="Git" height="70px" />
+                      <img src="/stack/imgi_4_javascript.svg" alt="Javascript" height="70px" />
+                      <img src="/stack/imgi_8_sql.svg" alt="SQL" height="70px" />
+                      <img src="/stack/imgi_9_react.svg" alt="React" height="70px" />
 
-  </section>
+                      <!-- Duplicate for infinite scroll effect -->
+                      <img src="/stack/html-1.svg" alt="HTML" height="70px" />
+                      <img src="/stack/css-3.svg" alt="CSS" height="70px" />
+                      <img src="/stack/imgi_12_nodejs.svg" alt="Node.js" height="70px" />
+                      <img src="/stack/imgi_14_tailwind.svg" alt="Tailwind" height="70px" />
+                      <img src="/stack/imgi_15_mongodb.svg" alt="Mongodb" height="70px" />
+                      <img src="/stack/imgi_18_Git.svg" alt="Git" height="70px" />
+                      <img src="/stack/imgi_4_javascript.svg" alt="Javascript" height="70px" />
+                      <img src="/stack/imgi_8_sql.svg" alt="SQL" height="70px" />
+                      <img src="/stack/imgi_9_react.svg" alt="React" height="70px" />
+                    </div>
+                </div>
+            </div>
+
+  <!-- </section> -->
   <div class="last-line"></div>
 
   <section class="Certification">
