--- a/menus/work.html
+++ b/menus/work.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Work</title>
-</head>
-<body>
-    <h1>work</h1>
-    <h1>Vinay Begar</h1>
-</body>
+    <link rel="stylesheet" href="/css/work.css" />
+    <script src="/js/work.js"></script>
+  </head>
+  <body>
+    <header class="navbar">
+      <div class="logo">
+        <a href="/menus/contact.html" class="btn small">Vinay B.</a>
+      </div>
+      <div class="menu">
+        <ul class="menu-head">
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="./menus/about.html">About</a></li>
+          <li><a href="./menus/work.html">Work</a></li>
+          <!-- <li><a href="./menus/contact.html">Contact</a></li> -->
+        </ul>
+      </div>
+      <div class="nav-right">
+        <!-- <span class="available">● available for work</span> -->
+        <a href="/menus/contact.html" class="btn small">Reach out →</a>
+      </div>
+    </header>
+
+    <!-- <h1>work</h1>
+    <h1>Vinay Begar</h1> -->
+  </body>
 </html>
