Work section added

--- a/menus/work.html
+++ b/menus/work.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Work</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/css/work.css" />
     <script src="/js/work.js"></script>
   </head>
@@ -15,18 +21,92 @@
       <div class="menu">
         <ul class="menu-head">
           <li><a href="/index.html">Home</a></li>
-          <li><a href="./menus/about.html">About</a></li>
+          <li><a href="/menus/about.html">About</a></li>
           <li><a href="./menus/work.html">Work</a></li>
           <!-- <li><a href="./menus/contact.html">Contact</a></li> -->
         </ul>
       </div>
       <div class="nav-right">
-        <!-- <span class="available">● available for work</span> -->
         <a href="/menus/contact.html" class="btn small">Reach out →</a>
       </div>
     </header>
+    <section class="hero">
+      <h1>Work Showcase</h1>
+    </section>
+    <div class="line"></div>
+    <!-- left -->
+    <div class="projects">
+      <div class="project-card">
+        <div class="project-image">
+          <img
+            src="/project-images/Brwoser extension img.jpg"
+            alt="Prism Pyramid Sitting on Top of a Desk"
+          />
+          <div class="image-fade"></div>
+        </div>
 
-    <!-- <h1>work</h1>
-    <h1>Vinay Begar</h1> -->
+        <div class="project-details">
+          <h3 class="project-title">Brwoser extension manager</h3>
+          <p class="project-role">Web Developer</p>
+          <p class="project-description">
+            Pushed the creative boundaries of Framer's layout animations to
+            create a unique narrative experience.
+          </p>
+
+          <div class="tech-stack">
+            <span class="tech">Github</span>
+            <span class="tech">livelink</span>
+          </div>
+        </div>
+      </div>
+      <!-- Mid -->
+      <div class="project-card">
+        <div class="project-image">
+          <img
+            src="/project-images/job-listing.jpg"
+            alt=""
+          />
+          <div class="image-fade"></div>
+        </div>
+
+        <div class="project-details">
+          <h3 class="project-title">Static Job Listing</h3>
+          <p class="project-role">Web Developer</p>
+          <p class="project-description">
+            Pushed the creative boundaries of Framer's layout animations to
+            create a unique narrative experience.
+          </p>
+
+          <div class="tech-stack">
+            <span class="tech">Github</span>
+            <span class="tech">livelink</span>
+          </div>
+        </div>
+      </div>
+      <!-- right -->
+       <div class="project-card">
+        <div class="project-image">
+          <img
+            src="/project-images/Brwoser extension img.jpg"
+            alt="Prism Pyramid Sitting on Top of a Desk"
+          />
+          <div class="image-fade"></div>
+        </div>
+
+        <div class="project-details">
+          <h3 class="project-title">Brwoser extension manager</h3>
+          <p class="project-role">Web Developer</p>
+          <p class="project-description">
+            Pushed the creative boundaries of Framer's layout animations to
+            create a unique narrative experience.
+          </p>
+
+          <div class="tech-stack">
+            <span class="tech">Github</span>
+            <span class="tech">livelink</span>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
