Work Section Updated

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css" />
     <script src="/script.js" defer></script>
   </head>
@@ -28,7 +30,7 @@
     </div>
     <!-- Navbar  -->
     <header class="navbar">
-      <div class="logo"><a href="/menus/contact.html" class="btn small">Vinay B.</a></div>
+      <div class="logo"><a href="/menus/contact.html" class="heading">Vinay B.</a></div>
       <div class="menu">
         <ul class="menu-head">
           <li><a href="/index.html">Home</a></li>
@@ -58,6 +60,31 @@
         <a href="#" class="btn dark">Download my resume ⬇</a>
       </div>
     </section>
+    
+    <footer class="footer">
+  <div class="footer-container">
+
+    <div class="footer-left">
+      <p>Desgined and developed by Vinay B.</p>
+    </div>
+
+    <div class="footer-center">
+      <a href="https://github.com/vinay-begar" aria-label="GitHub">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" alt="GitHub" />
+      </a>
+      <a href="https://www.linkedin.com/in/vinay-begar/" aria-label="LinkedIn">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" />
+      </a>
+      <a href="#" aria-label="Twitter">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg" alt="Twitter" />
+      </a>
+    </div>
+    <div class="footer-right">
+      <p>© 2025 Vinay B. — All Rights Reserved.</p>
+    </div>
+
+  </div>
+</footer>
 
     <div class="mouse-magnet"></div>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"
