--- a/menus/contact.html
+++ b/menus/contact.html
@@ -4,8 +4,116 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
+    <link rel="stylesheet" href="/css/contact.css" />
   </head>
   <body>
-    <h1>Contact</h1>
+    <header class="navbar">
+      <div class="logo">
+        <a href="/menus/contact.html" class="btn small">Vinay B.</a>
+      </div>
+      <div class="menu">
+        <ul class="menu-head">
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/menus/about.html">About</a></li>
+          <li><a href="/menus/work.html">Work</a></li>
+          <!-- <li><a href="./menus/contact.html">Contact</a></li> -->
+        </ul>
+      </div>
+      <div class="nav-right">
+        <!-- <span class="available">● available for work</span> -->
+        <a href="/menus/contact.html" class="btn small">Reach out →</a>
+      </div>
+    </header>
+    <section class="hero">
+      <h1>Get in Touch</h1>
+    </section>
+    <!-- <hr class="hr" style="margin-top: 100px;"> -->
+     <div class="line"></div>
+    <div class="contact">
+      <div class="contact-in">
+        <div class="left">
+        <!-- <img src="/images/mountain-img.jpg" alt="" style="height: 400px;"> -->
+      </div>
+      <div class="right">
+        <form class="contact-form">
+           <label>Name</label>
+        <input type="text" placeholder=" " required />
+        </form>
+      </div>
+      </div>
+      
+    </div>
+
+    <!-- <section class="contact-section">
+      <h2>Send me a message using this form below</h2>
+
+      <form class="contact-form">
+        <label>Name</label>
+        <input type="text" placeholder=" " required />
+
+        <label>Email</label>
+        <input type="email" placeholder=" " required />
+
+        <label>Message</label>
+        <textarea placeholder="Your inquiry here..." required></textarea>
+
+        <button type="submit">Send message</button>
+      </form> -->
+
+      <div class="social-section">
+         <!-- <p>or find me on these links</p>
+        <div class="social-links">
+          <a href="https://github.com/vinay-begar" aria-label="GitHub">
+            <img
+              src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg"
+              alt="GitHub"
+            />
+          </a>
+          <a
+            href="https://www.linkedin.com/in/vinay-begar/"
+            aria-label="LinkedIn"
+          >
+            <img
+              src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg"
+              alt="LinkedIn"
+            />
+          </a>
+          <a href="#" aria-label="Twitter">
+            <img
+              src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg"
+              alt="Twitter"
+            />
+          </a>
+        </div> 
+        <p class="email">vinaybbegar@gmail.com</p>
+      </div> -->
+    </section>
+    <!-- footer section -->
+      <footer class="footer">
+  <div class="footer-container">
+
+    <div class="footer-left">
+      <a href="/index.html">Home</a>
+      <a href="/menus/work.html">About</a>
+      <a href="/menus/contact.html">Work</a>
+    </div>
+
+    <div class="footer-center">
+      <a href="https://github.com/vinay-begar" aria-label="GitHub">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" alt="GitHub" />
+      </a>
+      <a href="https://www.linkedin.com/in/vinay-begar/" aria-label="LinkedIn">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" />
+      </a>
+      <a href="#" aria-label="Twitter">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg" alt="Twitter" />
+      </a>
+    </div>
+    <div class="footer-right">
+      <p>© 2025 Vinay B. — All Rights Reserved.</p>
+    </div>
+
+  </div>
+</footer>
   </body>
 </html>
