--- a/menus/work.html
+++ b/menus/work.html
@@ -34,79 +34,182 @@
       <h1>Work Showcase</h1>
     </section>
     <div class="line"></div>
-    <!-- left -->
-    <div class="projects">
-      <div class="project-card">
-        <div class="project-image">
-          <img
-            src="/project-images/Brwoser extension img.jpg"
-            alt="Prism Pyramid Sitting on Top of a Desk"
-          />
-          <div class="image-fade"></div>
+    <section class="work-section">
+      <div class="projects-container">
+        <div class="project-card">
+          <div class="project-image">
+            <img
+              src="/project-images/Brwoser extension img.jpg"
+              alt="Project Image"
+            />
+            <div class="image-fade"></div>
+          </div>
+          <div class="project-details">
+            <h3 class="project-title">Browser extension manager</h3>
+            <p class="project-role">Web Developer</p>
+            <div class="tech-stack">
+              <span class="tech">Github</span>
+              <span class="tech">Livelink</span>
+            </div>
+          </div>
         </div>
 
-        <div class="project-details">
-          <h3 class="project-title">Brwoser extension manager</h3>
-          <p class="project-role">Web Developer</p>
-          <p class="project-description">
-            Pushed the creative boundaries of Framer's layout animations to
-            create a unique narrative experience.
-          </p>
+        <div class="project-card">
+          <div class="project-image">
+            <img src="/project-images/job-listing.jpg" alt="Project Image" />
+            <div class="image-fade"></div>
+          </div>
+          <div class="project-details">
+            <h3 class="project-title">Portfolio Website</h3>
+            <p class="project-role">Frontend Developer</p>
+            <div class="tech-stack">
+              <span class="tech">Github</span>
+              <span class="tech">Livelink</span>
+            </div>
+          </div>
+        </div>
 
-          <div class="tech-stack">
-            <span class="tech">Github</span>
-            <span class="tech">livelink</span>
+        <div class="project-card">
+          <div class="project-image">
+            <img src="/project-images/job-listing.jpg" alt="Project Image" />
+            <div class="image-fade"></div>
+          </div>
+          <div class="project-details">
+            <h3 class="project-title">Dashboard UI</h3>
+            <p class="project-role">UI/UX Designer</p>
+            <div class="tech-stack">
+              <span class="tech">Github</span>
+              <span class="tech">Livelink</span>
+            </div>
           </div>
         </div>
       </div>
-      <!-- Mid -->
-      <div class="project-card">
-        <div class="project-image">
-          <img
-            src="/project-images/job-listing.jpg"
-            alt=""
-          />
-          <div class="image-fade"></div>
+      <!-- row 2 -->
+      <div class="projects-container">
+        <div class="project-card">
+          <div class="project-image">
+            <img
+              src="/project-images/Brwoser extension img.jpg"
+              alt="Project Image"
+            />
+            <div class="image-fade"></div>
+          </div>
+          <div class="project-details">
+            <h3 class="project-title">Browser extension manager</h3>
+            <p class="project-role">Web Developer</p>
+            <div class="tech-stack">
+              <span class="tech">Github</span>
+              <span class="tech">Livelink</span>
+            </div>
+          </div>
         </div>
 
-        <div class="project-details">
-          <h3 class="project-title">Static Job Listing</h3>
-          <p class="project-role">Web Developer</p>
-          <p class="project-description">
-            Pushed the creative boundaries of Framer's layout animations to
-            create a unique narrative experience.
-          </p>
+        <div class="project-card">
+          <div class="project-image">
+            <img src="/project-images/job-listing.jpg" alt="Project Image" />
+            <div class="image-fade"></div>
+          </div>
+          <div class="project-details">
+            <h3 class="project-title">Portfolio Website</h3>
+            <p class="project-role">Frontend Developer</p>
+            <div class="tech-stack">
+              <span class="tech">Github</span>
+              <span class="tech">Livelink</span>
+            </div>
+          </div>
+        </div>
 
-          <div class="tech-stack">
-            <span class="tech">Github</span>
-            <span class="tech">livelink</span>
+        <div class="project-card">
+          <div class="project-image">
+            <img src="/project-images/job-listing.jpg" alt="Project Image" />
+            <div class="image-fade"></div>
+          </div>
+          <div class="project-details">
+            <h3 class="project-title">Dashboard UI</h3>
+            <p class="project-role">UI/UX Designer</p>
+            <div class="tech-stack">
+              <span class="tech">Github</span>
+              <span class="tech">Livelink</span>
+            </div>
           </div>
         </div>
       </div>
-      <!-- right -->
-       <div class="project-card">
-        <div class="project-image">
-          <img
-            src="/project-images/Brwoser extension img.jpg"
-            alt="Prism Pyramid Sitting on Top of a Desk"
-          />
-          <div class="image-fade"></div>
+      <!-- row 3 -->
+      <div class="projects-container">
+        <div class="project-card">
+          <div class="project-image">
+            <img
+              src="/project-images/Brwoser extension img.jpg"
+              alt="Project Image"
+            />
+            <div class="image-fade"></div>
+          </div>
+          <div class="project-details">
+            <h3 class="project-title">Browser extension manager</h3>
+            <p class="project-role">Web Developer</p>
+            <div class="tech-stack">
+              <span class="tech">Github</span>
+              <span class="tech">Livelink</span>
+            </div>
+          </div>
         </div>
 
-        <div class="project-details">
-          <h3 class="project-title">Brwoser extension manager</h3>
-          <p class="project-role">Web Developer</p>
-          <p class="project-description">
-            Pushed the creative boundaries of Framer's layout animations to
-            create a unique narrative experience.
-          </p>
+        <div class="project-card">
+          <div class="project-image">
+            <img src="/project-images/job-listing.jpg" alt="Project Image" />
+            <div class="image-fade"></div>
+          </div>
+          <div class="project-details">
+            <h3 class="project-title">Portfolio Website</h3>
+            <p class="project-role">Frontend Developer</p>
+            <div class="tech-stack">
+              <span class="tech">Github</span>
+              <span class="tech">Livelink</span>
+            </div>
+          </div>
+        </div>
 
-          <div class="tech-stack">
-            <span class="tech">Github</span>
-            <span class="tech">livelink</span>
+        <div class="project-card">
+          <div class="project-image">
+            <img src="/project-images/job-listing.jpg" alt="Project Image" />
+            <div class="image-fade"></div>
+          </div>
+          <div class="project-details">
+            <h3 class="project-title">Dashboard UI</h3>
+            <p class="project-role">UI/UX Designer</p>
+            <div class="tech-stack">
+              <span class="tech">Github</span>
+              <span class="tech">Livelink</span>
+            </div>
           </div>
         </div>
       </div>
+    </section>
+        <footer class="footer">
+  <div class="footer-container">
+
+    <div class="footer-left">
+      <a href="/index.html">Home</a>
+      <a href="/menus/work.html">About</a>
+      <a href="/menus/contact.html">Work</a>
     </div>
+
+    <div class="footer-center">
+      <a href="https://github.com/vinay-begar" aria-label="GitHub">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" alt="GitHub" />
+      </a>
+      <a href="https://www.linkedin.com/in/vinay-begar/" aria-label="LinkedIn">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" />
+      </a>
+      <a href="#" aria-label="Twitter">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg" alt="Twitter" />
+      </a>
+    </div>
+    <div class="footer-right">
+      <p>© 2025 Vinay B. — All Rights Reserved.</p>
+    </div>
+
+  </div>
+</footer>
   </body>
 </html>
