--- a/menus/about.html
+++ b/menus/about.html
@@ -105,5 +105,31 @@
     </div>
     <!-- <h1>these isn't  everything yet</h1> -->
   </div>
+      <footer class="footer">
+  <div class="footer-container">
+
+    <div class="footer-left">
+      <a href="/index.html">Home</a>
+      <a href="/menus/work.html">About</a>
+      <a href="/menus/contact.html">Work</a>
+    </div>
+
+    <div class="footer-center">
+      <a href="https://github.com/vinay-begar" aria-label="GitHub">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" alt="GitHub" />
+      </a>
+      <a href="https://www.linkedin.com/in/vinay-begar/" aria-label="LinkedIn">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" />
+      </a>
+      <a href="#" aria-label="Twitter">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg" alt="Twitter" />
+      </a>
+    </div>
+    <div class="footer-right">
+      <p>© 2025 Vinay B. — All Rights Reserved.</p>
+    </div>
+
+  </div>
+</footer>
 </body>
 </html>
