Work & About updated

--- a/menus/about.html
+++ b/menus/about.html
@@ -10,6 +10,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet" />
+
   <link rel="stylesheet" href="/css/about.css" />
   <script src="/js/about.js" defer></script>
 </head>
@@ -18,7 +20,7 @@
   <!-- Navbar  -->
   <header class="navbar">
     <div class="logo">
-      <a href="/menus/contact.html" class="btn small">Vinay B.</a>
+      <a href="/menus/contact.html" class="heading">Vinay B.</a>
     </div>
     <div class="menu">
       <ul class="menu-head">
@@ -40,38 +42,38 @@
     <h1><span>Vinay</span> Begar</h1>
     <p class="role">Frontend Web Developer</p>
   </div>
-  
+
   <div class="line"></div>
   <!-- About information -->
   <!-- <section class="self-information"> -->
-    <div class="stack">
-                <!-- <h3>My Stack</h3> -->
-                  <div class="marquee">
-                    <div class="svg-icons">
-                      <!-- These icons will scroll -->
-                      <img src="/stack/html-1.svg" alt="HTML" height="70px" />
-                      <img src="/stack/css-3.svg" alt="CSS" height="70px" />
-                      <img src="/stack/imgi_12_nodejs.svg" alt="Node.js" height="70px" />
-                      <img src="/stack/imgi_14_tailwind.svg" alt="Tailwind" height="70px" />
-                      <img src="/stack/imgi_15_mongodb.svg" alt="Mongodb" height="70px" />
-                      <img src="/stack/imgi_18_Git.svg" alt="Git" height="70px" />
-                      <img src="/stack/imgi_4_javascript.svg" alt="Javascript" height="70px" />
-                      <img src="/stack/imgi_8_sql.svg" alt="SQL" height="70px" />
-                      <img src="/stack/imgi_9_react.svg" alt="React" height="70px" />
+  <div class="stack">
+    <!-- <h3>My Stack</h3> -->
+    <div class="marquee">
+      <div class="svg-icons">
+        <!-- These icons will scroll -->
+        <img src="/stack/html-1.svg" alt="HTML" height="70px" />
+        <img src="/stack/css-3.svg" alt="CSS" height="70px" />
+        <img src="/stack/imgi_12_nodejs.svg" alt="Node.js" height="70px" />
+        <img src="/stack/imgi_14_tailwind.svg" alt="Tailwind" height="70px" />
+        <img src="/stack/imgi_15_mongodb.svg" alt="Mongodb" height="70px" />
+        <img src="/stack/imgi_18_Git.svg" alt="Git" height="70px" />
+        <img src="/stack/imgi_4_javascript.svg" alt="Javascript" height="70px" />
+        <img src="/stack/imgi_8_sql.svg" alt="SQL" height="70px" />
+        <img src="/stack/imgi_9_react.svg" alt="React" height="70px" />
 
-                      <!-- Duplicate for infinite scroll effect -->
-                      <img src="/stack/html-1.svg" alt="HTML" height="70px" />
-                      <img src="/stack/css-3.svg" alt="CSS" height="70px" />
-                      <img src="/stack/imgi_12_nodejs.svg" alt="Node.js" height="70px" />
-                      <img src="/stack/imgi_14_tailwind.svg" alt="Tailwind" height="70px" />
-                      <img src="/stack/imgi_15_mongodb.svg" alt="Mongodb" height="70px" />
-                      <img src="/stack/imgi_18_Git.svg" alt="Git" height="70px" />
-                      <img src="/stack/imgi_4_javascript.svg" alt="Javascript" height="70px" />
-                      <img src="/stack/imgi_8_sql.svg" alt="SQL" height="70px" />
-                      <img src="/stack/imgi_9_react.svg" alt="React" height="70px" />
-                    </div>
-                </div>
-            </div>
+        <!-- Duplicate for infinite scroll effect -->
+        <img src="/stack/html-1.svg" alt="HTML" height="70px" />
+        <img src="/stack/css-3.svg" alt="CSS" height="70px" />
+        <img src="/stack/imgi_12_nodejs.svg" alt="Node.js" height="70px" />
+        <img src="/stack/imgi_14_tailwind.svg" alt="Tailwind" height="70px" />
+        <img src="/stack/imgi_15_mongodb.svg" alt="Mongodb" height="70px" />
+        <img src="/stack/imgi_18_Git.svg" alt="Git" height="70px" />
+        <img src="/stack/imgi_4_javascript.svg" alt="Javascript" height="70px" />
+        <img src="/stack/imgi_8_sql.svg" alt="SQL" height="70px" />
+        <img src="/stack/imgi_9_react.svg" alt="React" height="70px" />
+      </div>
+    </div>
+  </div>
 
   <!-- </section> -->
   <div class="last-line"></div>
@@ -79,57 +81,95 @@
   <section class="Certification">
     <h4>Certifications</h4>
     <div class="certificate">
-      
-        <div class="cert-left">
-        <img class="cert-img1" src="/images/Cousera certificate.jpeg" alt="">
-        <div class="cert-details1">
-        <h1> Meta Front-End Developer</h1>
-        <h2>Coursera (2025)</h2><br>
+      <div class="projects-container">
+        <div class="project-card">
+          <div class="project-image">
+            <img src="/images/Cousera certificate.jpeg" alt="Project Image" />
+            <div class="image-fade"></div>
+          </div>
+          <div class="project-details">
+            <h3 class="project-title">Meta Front-End Developer</h3>
+            <p class="project-role">Coursera (2025)</p>
+            <div class="tech-stack">
+              <a href=""><span class="tech">View Certificate</span></a>
+              <!-- <span class="tech"></span> -->
+            </div>
+          </div>
         </div>
-      </div>
-      
-      <div class="cert-right">
-        <img class="cert-img2" src="/images/Css Hacker Rank certificate.png" alt="">
-        <div class="cert-details2">
-        <h1> HackerRank (CSS)</h1>
-        <h2>HackerRank (2025)</h2><br>
+
+        <div class="project-card">
+          <div class="project-image">
+            <img src="/images/Css Hacker Rank certificate.png" alt="Project Image" />
+            <div class="image-fade"></div>
+          </div>
+          <div class="project-details">
+            <h3 class="project-title">Hacker Rank CSS</h3>
+            <p class="project-role">HackerRank (2024)</p>
+            <div class="tech-stack">
+             <a href=""><span class="tech">View Certificate</span></a> 
+            </div>
+          </div>
         </div>
-      </div>
+
+        <!-- <div class="cert-left">
+          <img
+            class="cert-img1"
+            src="/images/Cousera certificate.jpeg"
+            alt=""
+          />
+          <div class="cert-details1">
+            <h1>Meta Front-End Developer</h1>
+            <h2>Coursera (2025)</h2>
+            <br />
+          </div>
+        </div>
+
+        <div class="cert-right">
+          <img
+            class="cert-img2"
+            src="/images/Css Hacker Rank certificate.png"
+            alt=""
+          />
+          <div class="cert-details2">
+            <h1>HackerRank (CSS)</h1>
+            <h2>HackerRank (2025)</h2>
+            <br />
+          </div>
+        </div> -->
       </div>
   </section>
-  
-  <div class="before-pattern">
-    <div class="heading"> <h1>These isn't <BR> Everything yet</h1>
-     <a href="/menus/work.html"><button class="after-button"><h2>More about me </h2></button></a>
 
+  <div class="before-pattern">
+    <div class="heading">
+      <h1>Checkout My Works</h1>
+      <a href="/menus/work.html"><button class="after-button">
+          <h2>More about me</h2>
+        </button></a>
     </div>
     <!-- <h1>these isn't  everything yet</h1> -->
   </div>
-      <footer class="footer">
-  <div class="footer-container">
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-left">
+        <p>Desgined and developed by Vinay B.</p>
+      </div>
 
-    <div class="footer-left">
-      <a href="/index.html">Home</a>
-      <a href="/menus/work.html">About</a>
-      <a href="/menus/contact.html">Work</a>
+      <div class="footer-center">
+        <a href="https://github.com/vinay-begar" aria-label="GitHub">
+          <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" alt="GitHub" />
+        </a>
+        <a href="https://www.linkedin.com/in/vinay-begar/" aria-label="LinkedIn">
+          <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" />
+        </a>
+        <a href="#" aria-label="Twitter">
+          <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg" alt="Twitter" />
+        </a>
+      </div>
+      <div class="footer-right">
+        <p>© 2025 Vinay B. — All Rights Reserved.</p>
+      </div>
     </div>
-
-    <div class="footer-center">
-      <a href="https://github.com/vinay-begar" aria-label="GitHub">
-        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" alt="GitHub" />
-      </a>
-      <a href="https://www.linkedin.com/in/vinay-begar/" aria-label="LinkedIn">
-        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" />
-      </a>
-      <a href="#" aria-label="Twitter">
-        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg" alt="Twitter" />
-      </a>
-    </div>
-    <div class="footer-right">
-      <p>© 2025 Vinay B. — All Rights Reserved.</p>
-    </div>
-
-  </div>
-</footer>
+  </footer>
 </body>
+
 </html>
