--- a/menus/contact.html
+++ b/menus/contact.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/css/contact.css" />
   </head>
   <body>
     <header class="navbar">
       <div class="logo">
-        <a href="/menus/contact.html" class="btn small">Vinay B.</a>
+        <a href="/menus/contact.html" class="heading">Vinay B.</a>
       </div>
       <div class="menu">
         <ul class="menu-head">
@@ -59,43 +63,12 @@
 
         <button type="submit">Send message</button>
       </form> -->
-
-      <div class="social-section">
-         <!-- <p>or find me on these links</p>
-        <div class="social-links">
-          <a href="https://github.com/vinay-begar" aria-label="GitHub">
-            <img
-              src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg"
-              alt="GitHub"
-            />
-          </a>
-          <a
-            href="https://www.linkedin.com/in/vinay-begar/"
-            aria-label="LinkedIn"
-          >
-            <img
-              src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg"
-              alt="LinkedIn"
-            />
-          </a>
-          <a href="#" aria-label="Twitter">
-            <img
-              src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg"
-              alt="Twitter"
-            />
-          </a>
-        </div> 
-        <p class="email">vinaybbegar@gmail.com</p>
-      </div> -->
-    </section>
     <!-- footer section -->
       <footer class="footer">
   <div class="footer-container">
 
     <div class="footer-left">
-      <a href="/index.html">Home</a>
-      <a href="/menus/work.html">About</a>
-      <a href="/menus/contact.html">Work</a>
+      <p>Desgined and developed by Vinay B.</p>
     </div>
 
     <div class="footer-center">
