--- a/menus/work.html
+++ b/menus/work.html
@@ -10,13 +10,17 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/css/work.css" />
     <script src="/js/work.js"></script>
   </head>
   <body>
     <header class="navbar">
       <div class="logo">
-        <a href="/menus/contact.html" class="btn small">Vinay B.</a>
+        <a href="/menus/contact.html" class="heading">Vinay B.</a>
       </div>
       <div class="menu">
         <ul class="menu-head">
@@ -185,31 +189,39 @@
         </div>
       </div>
     </section>
-        <footer class="footer">
-  <div class="footer-container">
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-left">
+           <p>Desgined and developed by Vinay B.</p>
+        </div>
 
-    <div class="footer-left">
-      <a href="/index.html">Home</a>
-      <a href="/menus/work.html">About</a>
-      <a href="/menus/contact.html">Work</a>
-    </div>
-
-    <div class="footer-center">
-      <a href="https://github.com/vinay-begar" aria-label="GitHub">
-        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" alt="GitHub" />
-      </a>
-      <a href="https://www.linkedin.com/in/vinay-begar/" aria-label="LinkedIn">
-        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" />
-      </a>
-      <a href="#" aria-label="Twitter">
-        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg" alt="Twitter" />
-      </a>
-    </div>
-    <div class="footer-right">
-      <p>© 2025 Vinay B. — All Rights Reserved.</p>
-    </div>
-
-  </div>
-</footer>
+        <div class="footer-center">
+          <a href="https://github.com/vinay-begar" aria-label="GitHub">
+            <img
+              src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg"
+              alt="GitHub"
+            />
+          </a>
+          <a
+            href="https://www.linkedin.com/in/vinay-begar/"
+            aria-label="LinkedIn"
+          >
+            <img
+              src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg"
+              alt="LinkedIn"
+            />
+          </a>
+          <a href="#" aria-label="Twitter">
+            <img
+              src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg"
+              alt="Twitter"
+            />
+          </a>
+        </div>
+        <div class="footer-right">
+          <p>© 2025 Vinay B. — All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
